Fix dropdown menu z-index

--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -37,6 +37,7 @@
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
     box-shadow: 0 10px 20px 0 rgba($primary-very-dark, 0.05);
+    z-index: 100;
   }
   & &-menu-option {
     height: auto;
